Refactoring of filenamesd

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,7 @@
             "name": "Run Continuous",
             "type": "debugpy",
             "request": "launch",
-            "cwd": "continuous",
-            "program": "main.py",
+            "program": "continuous/main.py",
             "console": "integratedTerminal"
         }
     ]
